Fixed pixel missalignment of header, hopefully last time

--- a/application/views/css/base-sass/common.sass
+++ b/application/views/css/base-sass/common.sass
@@ -335,7 +335,7 @@ code
 	z-index: 4
 	text-align: right
 	background: transparent
-	padding: 2px 3px 0 3px
+	padding: 0px 3px 0 3px
 	float: right
 
 	input
